--- a/src/index.css
+++ b/src/index.css
@@ -201,7 +201,7 @@ button.secondary {
   letter-spacing: 0.1rem;
   font-weight: 700;
   font-size: 0.875rem;
-  margin-top: 1.5rem;
+  margin-top: 0.75rem;
 }
 
 button.mini {
@@ -343,9 +343,9 @@ Care Section Styles
 
 .water-list__completed-img,
 .feed-list__completed-img {
-  width: 50%;
+  width: 70%;
   height: auto;
-  margin: 1rem 0 2rem 0;
+  margin: 2rem 0;
 }
 
 .care__btn {
@@ -451,7 +451,7 @@ Plant List Section
 }
 
 .plant-list {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -713,7 +713,8 @@ Global Styles
     font-size: 1.3rem;
   }
 
-  section {
+  section,
+  .plant-list {
     width: 90%;
   }
   /*
