--- a/src/index.css
+++ b/src/index.css
@@ -515,6 +515,7 @@ Plant Details Section
   width: 150px;
   height: 150px;
   display: flex;
+  align-items: center;
   align-self: center;
   overflow: hidden;
   border-radius: 50%;
